@@ -27,10 +27,10 @@ import org.apache.kafka.connect.storage.ClusterConfigState;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
@@ -117,7 +117,7 @@ public class WorkerSinkTaskContext implements SinkTaskContext {
             if (sinkTask.shouldPause()) {
                 log.debug("{} Connector is paused, so not pausing consumer's partitions {}", this, partitions);
             } else {
-                consumer.pause(Arrays.asList(partitions));
+                consumer.pause(List.of(partitions));
                 log.debug("{} Pausing partitions {}. Connector is not paused.", this, partitions);
             }
         } catch (IllegalStateException e) {
@@ -131,11 +131,11 @@ public class WorkerSinkTaskContext implements SinkTaskContext {
             throw new IllegalWorkerStateException("SinkTaskContext may not be used to resume consumption until the task is initialized");
         }
         try {
-            pausedPartitions.removeAll(Arrays.asList(partitions));
+            List.of(partitions).forEach(pausedPartitions::remove);
             if (sinkTask.shouldPause()) {
                 log.debug("{} Connector is paused, so not resuming consumer's partitions {}", this, partitions);
             } else {
-                consumer.resume(Arrays.asList(partitions));
+                consumer.resume(List.of(partitions));
                 log.debug("{} Resuming partitions: {}", this, partitions);
             }
         } catch (IllegalStateException e) {
